<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_grey">

    <LinearLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <ImageView
                android:id="@+id/bg_pic_preview"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/back_ground_picture"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_pre"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/camera_fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="4dp"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_action_camera"/>
        </android.support.design.widget.CoordinatorLayout>

        <android.support.v7.widget.CardView
            style="@style/AddEditCardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/event_title"
                app:counterMaxLength="30"
                app:counterTextAppearance="@style/AddEdit_EditTextInput"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small.Inverse">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_edit_text"
                    style="@style/EditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="30"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AddEditCardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/date_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AddEditHeadingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_date"/>

                    <TextView
                        android:id="@+id/date_text_view_edit"
                        style="@style/AddEditSelectedContentText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_action_right"
                        android:gravity="end|center_vertical"
                        android:hint="@string/when_does_it_happen"/>
                </LinearLayout>

                <View style="@style/LayoutDivider.Vertical"/>

                <LinearLayout
                    android:id="@+id/repeat_layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AddEditHeadingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_mode"/>

                    <TextView
                        android:id="@+id/repeat_text_view_edit"
                        style="@style/AddEditSelectedContentText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_action_right"
                        android:gravity="end|center_vertical"
                        android:hint="@string/how_often_to_repeat"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AddEditCardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/star_textview_addedit"
                    style="@style/AddEditHeadingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_action_star"
                    android:gravity="center"
                    android:text="@string/star_this_event"
                    tools:ignore="RtlHardcoded"/>

                <View style="@style/LayoutDivider.Horizontal"/>

                <TextView
                    android:id="@+id/category_textview_addedit"
                    style="@style/AddEditHeadingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_action_right"
                    android:drawableLeft="@drawable/ic_category_empty"
                    android:gravity="center"
                    android:text="@string/tab_category"
                    tools:ignore="RtlHardcoded"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AddEditCardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/remark"
                android:orientation="horizontal"
                android:theme="@style/MyDialText"
                app:counterMaxLength="200"
                app:counterTextAppearance="@style/AddEdit_EditTextInput">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description_edit_text"
                    style="@style/EditTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="100"/>

            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>