<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/repeat_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="0dp">


    <TextView
        android:id="@+id/repeat_dial_title"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/how_often_to_repeat"
        android:textColor="@color/grey_btm_sheet"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Weekly"
            android:textColor="@color/grey_btm_sheet_text"/>

        <TextView
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Monthly"
            android:textColor="@color/grey_btm_sheet_text"/>

        <TextView
            android:id="@+id/annually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Annually"
            android:textColor="@color/grey_btm_sheet_text"/>

        <TextView
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="Never"
            android:textColor="@color/grey_btm_sheet_text"/>


    </LinearLayout>


    <!--<RadioButton-->

    <!--android:id="@+id/every_week_rb"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="48dp"-->
    <!--android:layoutDirection="inherit"-->
    <!--android:text="@string/every_week"-->
    <!--android:textAppearance="@style/MyDialText"/>-->

    <!--<RadioButton-->
    <!--android:id="@+id/every_month"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="48dp"-->
    <!--android:layoutDirection="inherit"-->
    <!--android:text="@string/every_month"-->
    <!--android:textAppearance="@style/MyDialText"-->
    <!--/>-->

    <!--<RadioButton-->
    <!--android:id="@+id/every_year"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="48dp"-->

    <!--android:layoutDirection="inherit"-->
    <!--android:text="@string/every_year"-->
    <!--android:textAlignment="inherit"-->
    <!--android:textAppearance="@style/MyDialText"-->
    <!--/>-->

    <!--<RadioButton-->
    <!--android:id="@+id/never"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="48dp"-->
    <!--android:layoutDirection="inherit"-->
    <!--android:text="@string/never"-->
    <!--android:textAppearance="@style/MyDialText"-->
    <!--/>-->


    <!--<TextView-->
    <!--android:id="@+id/every_week"-->
    <!--android:layout_margin="16dp"-->
    <!--android:gravity="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/every_week"-->
    <!--android:textAppearance="@style/MyDialText"/>-->
    <!--<TextView-->
    <!--android:id="@+id/every_month"-->
    <!--android:layout_margin="16dp"-->
    <!--android:gravity="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/every_month"-->
    <!--android:textAppearance="@style/MyDialText"/>-->
    <!--<TextView-->
    <!--android:background="@color/grey"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0.5dp"/>-->
    <!--<TextView-->
    <!--android:id="@+id/every_year"-->
    <!--android:layout_margin="16dp"-->
    <!--android:gravity="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/every_year"-->
    <!--android:textAppearance="@style/MyDialText"/>-->
    <!--<TextView-->
    <!--android:background="@color/grey"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0.5dp"/>-->
    <!--<TextView-->
    <!--android:id="@+id/never"-->
    <!--android:layout_margin="16dp"-->
    <!--android:gravity="center"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="@string/never"-->
    <!--android:textAppearance="@style/MyDialText"/>-->

</LinearLayout>