<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_edit_menu_save"
        android:title="@string/save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always"/>

</menu>